[package]
name = "tkm2_0"
description = "A terminal based task manager."
version = "0.8.5"
authors = ["Sam Perlmutter <sam.perlmutter227@gmail.com>"]
edition = "2018"
repository = "https://github.com/samperlmutter/tkm"
license = "MIT"

[dependencies]
tui = { version = "0.4.0", default-features = false, features = ['termion'] }
termion = "1.5"
sysinfo = "0.8.*"
pretty-bytes = "0.2.2"
"nom" = "4.2.3"
procfs = "0.15.1"
libc = "0.2.141"
syscalls = "0.6.9"
regex = "1.5.4"
[build-dependencies]
cmake = "0.1.31"
